--- a/lasso_factorial_selection/lasso_vs_forward.ipynb
+++ b/lasso_factorial_selection/lasso_vs_forward.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8867842337352561\n"
+      "0.20377728039279064\n"
      ]
     }
    ],
@@ -100,6 +100,220 @@
     "fs_k4.predict(fm_k4.T_test)\n",
     "fs_k4.compute_mse(fm_k4.y_test)\n",
     "print(fs_k4.mse)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>            <td>y</td>        <th>  R-squared:         </th> <td>   0.811</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.809</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   424.2</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Tue, 28 May 2024</td> <th>  Prob (F-statistic):</th> <td>4.10e-280</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>14:39:29</td>     <th>  Log-Likelihood:    </th> <td> -482.09</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>   800</td>      <th>  AIC:               </th> <td>   982.2</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>   791</td>      <th>  BIC:               </th> <td>   1024.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     8</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "    <td></td>       <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th> <td>    0.0607</td> <td>    0.016</td> <td>    3.840</td> <td> 0.000</td> <td>    0.030</td> <td>    0.092</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x1</th>    <td> 5.319e-17</td> <td> 3.49e-18</td> <td>   15.236</td> <td> 0.000</td> <td> 4.63e-17</td> <td>    6e-17</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x2</th>    <td> -3.09e-17</td> <td> 3.79e-18</td> <td>   -8.156</td> <td> 0.000</td> <td>-3.83e-17</td> <td>-2.35e-17</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x3</th>    <td> 3.339e-17</td> <td> 4.59e-18</td> <td>    7.267</td> <td> 0.000</td> <td> 2.44e-17</td> <td> 4.24e-17</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x4</th>    <td>   -0.0181</td> <td>    0.016</td> <td>   -1.143</td> <td> 0.253</td> <td>   -0.049</td> <td>    0.013</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x5</th>    <td> 2.736e-17</td> <td>  2.2e-18</td> <td>   12.424</td> <td> 0.000</td> <td>  2.3e-17</td> <td> 3.17e-17</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x6</th>    <td>-2.477e-18</td> <td> 2.37e-18</td> <td>   -1.045</td> <td> 0.297</td> <td>-7.13e-18</td> <td> 2.18e-18</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x7</th>    <td>    0.2458</td> <td>    0.016</td> <td>   15.503</td> <td> 0.000</td> <td>    0.215</td> <td>    0.277</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x8</th>    <td> 3.933e-18</td> <td> 1.17e-18</td> <td>    3.364</td> <td> 0.001</td> <td> 1.64e-18</td> <td> 6.23e-18</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x9</th>    <td>   -0.3468</td> <td>    0.016</td> <td>  -21.863</td> <td> 0.000</td> <td>   -0.378</td> <td>   -0.316</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x10</th>   <td>   -0.1718</td> <td>    0.016</td> <td>  -10.827</td> <td> 0.000</td> <td>   -0.203</td> <td>   -0.141</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x11</th>   <td>         0</td> <td>        0</td> <td>      nan</td> <td>   nan</td> <td>        0</td> <td>        0</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x12</th>   <td>   -0.6523</td> <td>    0.016</td> <td>  -41.047</td> <td> 0.000</td> <td>   -0.683</td> <td>   -0.621</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x13</th>   <td>   -0.0669</td> <td>    0.016</td> <td>   -4.213</td> <td> 0.000</td> <td>   -0.098</td> <td>   -0.036</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x14</th>   <td>   -0.3724</td> <td>    0.016</td> <td>  -23.481</td> <td> 0.000</td> <td>   -0.404</td> <td>   -0.341</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>x15</th>   <td>   -0.2186</td> <td>    0.016</td> <td>  -13.785</td> <td> 0.000</td> <td>   -0.250</td> <td>   -0.187</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>199.676</td> <th>  Durbin-Watson:     </th> <td>   2.042</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>  70.205</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.527</td>  <th>  Prob(JB):          </th> <td>5.69e-16</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td> 2.002</td>  <th>  Cond. No.          </th> <td>2.99e+32</td>\n",
+       "</tr>\n",
+       "</table><br/><br/>Notes:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The smallest eigenvalue is 1.08e-62. This might indicate that there are<br/>strong multicollinearity problems or that the design matrix is singular."
+      ],
+      "text/latex": [
+       "\\begin{center}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\toprule\n",
+       "\\textbf{Dep. Variable:}    &        y         & \\textbf{  R-squared:         } &     0.811   \\\\\n",
+       "\\textbf{Model:}            &       OLS        & \\textbf{  Adj. R-squared:    } &     0.809   \\\\\n",
+       "\\textbf{Method:}           &  Least Squares   & \\textbf{  F-statistic:       } &     424.2   \\\\\n",
+       "\\textbf{Date:}             & Tue, 28 May 2024 & \\textbf{  Prob (F-statistic):} & 4.10e-280   \\\\\n",
+       "\\textbf{Time:}             &     14:39:29     & \\textbf{  Log-Likelihood:    } &   -482.09   \\\\\n",
+       "\\textbf{No. Observations:} &         800      & \\textbf{  AIC:               } &     982.2   \\\\\n",
+       "\\textbf{Df Residuals:}     &         791      & \\textbf{  BIC:               } &     1024.   \\\\\n",
+       "\\textbf{Df Model:}         &           8      & \\textbf{                     } &             \\\\\n",
+       "\\textbf{Covariance Type:}  &    nonrobust     & \\textbf{                     } &             \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lcccccc}\n",
+       "               & \\textbf{coef} & \\textbf{std err} & \\textbf{t} & \\textbf{P$> |$t$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+       "\\midrule\n",
+       "\\textbf{const} &       0.0607  &        0.016     &     3.840  &         0.000        &        0.030    &        0.092     \\\\\n",
+       "\\textbf{x1}    &    5.319e-17  &     3.49e-18     &    15.236  &         0.000        &     4.63e-17    &        6e-17     \\\\\n",
+       "\\textbf{x2}    &    -3.09e-17  &     3.79e-18     &    -8.156  &         0.000        &    -3.83e-17    &    -2.35e-17     \\\\\n",
+       "\\textbf{x3}    &    3.339e-17  &     4.59e-18     &     7.267  &         0.000        &     2.44e-17    &     4.24e-17     \\\\\n",
+       "\\textbf{x4}    &      -0.0181  &        0.016     &    -1.143  &         0.253        &       -0.049    &        0.013     \\\\\n",
+       "\\textbf{x5}    &    2.736e-17  &      2.2e-18     &    12.424  &         0.000        &      2.3e-17    &     3.17e-17     \\\\\n",
+       "\\textbf{x6}    &   -2.477e-18  &     2.37e-18     &    -1.045  &         0.297        &    -7.13e-18    &     2.18e-18     \\\\\n",
+       "\\textbf{x7}    &       0.2458  &        0.016     &    15.503  &         0.000        &        0.215    &        0.277     \\\\\n",
+       "\\textbf{x8}    &    3.933e-18  &     1.17e-18     &     3.364  &         0.001        &     1.64e-18    &     6.23e-18     \\\\\n",
+       "\\textbf{x9}    &      -0.3468  &        0.016     &   -21.863  &         0.000        &       -0.378    &       -0.316     \\\\\n",
+       "\\textbf{x10}   &      -0.1718  &        0.016     &   -10.827  &         0.000        &       -0.203    &       -0.141     \\\\\n",
+       "\\textbf{x11}   &            0  &            0     &       nan  &           nan        &            0    &            0     \\\\\n",
+       "\\textbf{x12}   &      -0.6523  &        0.016     &   -41.047  &         0.000        &       -0.683    &       -0.621     \\\\\n",
+       "\\textbf{x13}   &      -0.0669  &        0.016     &    -4.213  &         0.000        &       -0.098    &       -0.036     \\\\\n",
+       "\\textbf{x14}   &      -0.3724  &        0.016     &   -23.481  &         0.000        &       -0.404    &       -0.341     \\\\\n",
+       "\\textbf{x15}   &      -0.2186  &        0.016     &   -13.785  &         0.000        &       -0.250    &       -0.187     \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "\\begin{tabular}{lclc}\n",
+       "\\textbf{Omnibus:}       & 199.676 & \\textbf{  Durbin-Watson:     } &    2.042  \\\\\n",
+       "\\textbf{Prob(Omnibus):} &   0.000 & \\textbf{  Jarque-Bera (JB):  } &   70.205  \\\\\n",
+       "\\textbf{Skew:}          &  -0.527 & \\textbf{  Prob(JB):          } & 5.69e-16  \\\\\n",
+       "\\textbf{Kurtosis:}      &   2.002 & \\textbf{  Cond. No.          } & 2.99e+32  \\\\\n",
+       "\\bottomrule\n",
+       "\\end{tabular}\n",
+       "%\\caption{OLS Regression Results}\n",
+       "\\end{center}\n",
+       "\n",
+       "Notes: \\newline\n",
+       " [1] Standard Errors assume that the covariance matrix of the errors is correctly specified. \\newline\n",
+       " [2] The smallest eigenvalue is 1.08e-62. This might indicate that there are \\newline\n",
+       " strong multicollinearity problems or that the design matrix is singular."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:                      y   R-squared:                       0.811\n",
+       "Model:                            OLS   Adj. R-squared:                  0.809\n",
+       "Method:                 Least Squares   F-statistic:                     424.2\n",
+       "Date:                Tue, 28 May 2024   Prob (F-statistic):          4.10e-280\n",
+       "Time:                        14:39:29   Log-Likelihood:                -482.09\n",
+       "No. Observations:                 800   AIC:                             982.2\n",
+       "Df Residuals:                     791   BIC:                             1024.\n",
+       "Df Model:                           8                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "==============================================================================\n",
+       "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "------------------------------------------------------------------------------\n",
+       "const          0.0607      0.016      3.840      0.000       0.030       0.092\n",
+       "x1          5.319e-17   3.49e-18     15.236      0.000    4.63e-17       6e-17\n",
+       "x2          -3.09e-17   3.79e-18     -8.156      0.000   -3.83e-17   -2.35e-17\n",
+       "x3          3.339e-17   4.59e-18      7.267      0.000    2.44e-17    4.24e-17\n",
+       "x4            -0.0181      0.016     -1.143      0.253      -0.049       0.013\n",
+       "x5          2.736e-17    2.2e-18     12.424      0.000     2.3e-17    3.17e-17\n",
+       "x6         -2.477e-18   2.37e-18     -1.045      0.297   -7.13e-18    2.18e-18\n",
+       "x7             0.2458      0.016     15.503      0.000       0.215       0.277\n",
+       "x8          3.933e-18   1.17e-18      3.364      0.001    1.64e-18    6.23e-18\n",
+       "x9            -0.3468      0.016    -21.863      0.000      -0.378      -0.316\n",
+       "x10           -0.1718      0.016    -10.827      0.000      -0.203      -0.141\n",
+       "x11                 0          0        nan        nan           0           0\n",
+       "x12           -0.6523      0.016    -41.047      0.000      -0.683      -0.621\n",
+       "x13           -0.0669      0.016     -4.213      0.000      -0.098      -0.036\n",
+       "x14           -0.3724      0.016    -23.481      0.000      -0.404      -0.341\n",
+       "x15           -0.2186      0.016    -13.785      0.000      -0.250      -0.187\n",
+       "==============================================================================\n",
+       "Omnibus:                      199.676   Durbin-Watson:                   2.042\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):               70.205\n",
+       "Skew:                          -0.527   Prob(JB):                     5.69e-16\n",
+       "Kurtosis:                       2.002   Cond. No.                     2.99e+32\n",
+       "==============================================================================\n",
+       "\n",
+       "Notes:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The smallest eigenvalue is 1.08e-62. This might indicate that there are\n",
+       "strong multicollinearity problems or that the design matrix is singular.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare betas, expected outcomes, R^2, and MSE\n",
+    "fs_k4.results.summary()"
    ]
   },
   {
