Working evaluation of lasso vs fs

--- a/lasso_factorial_selection/lasso_vs_forward.ipynb
+++ b/lasso_factorial_selection/lasso_vs_forward.ipynb
@@ -9,18 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -28,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,16 +37,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Factorial model with k=4"
+    "### Initialize factorial model (choose k and degree)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fm_k4 = FactorialModel(\n",
+    "fm = FactorialModel(\n",
     "    n=1000,\n",
     "    k=4,\n",
     "    degree=4,\n",
@@ -68,26 +59,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample beta (normal or skewed)\n",
-    "fm_k4.sample_normal_beta()          # Normal beta (CHOOSE ONE)\n",
-    "# fm_k4.sample_skewed_beta(min_active_degree=2)          # Skewed beta (CHOOSE ONE)\n",
-    "true_beta = fm_k4.beta\n",
-    "beta_mask = fm_k4.pf.fit_transform(fm_k4.pf.powers_)\n",
+    "# fm.sample_normal_beta()          # Normal beta (CHOOSE ONE)\n",
+    "fm.sample_skewed_beta(min_active_degree=2)          # Skewed beta (CHOOSE ONE)\n",
+    "true_beta = fm.beta\n",
+    "beta_mask = fm.pf.fit_transform(fm.pf.powers_)\n",
     "true_expected_outcomes = beta_mask @ true_beta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate Lasso model\n",
-    "def evaluate_lasso(fm):\n",
+    "# Method to evaluate Lasso model\n",
+    "def evaluate_lasso():\n",
     "    fm.sample_and_split_data(seed=None)\n",
     "    fm.fit_lasso()\n",
     "    fm.predict()\n",
@@ -97,12 +88,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Evaluate forward selection\n",
-    "def evaluate_forward_selection(fs, T_test, y_test):\n",
+    "# Method to evaluate forward selection\n",
+    "def evaluate_forward_selection(T_test, y_test):\n",
     "    fs.forward_selection()\n",
     "    fs.predict(T_test)\n",
     "    fs.compute_mse(y_test)\n",
@@ -111,12 +102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Evaluate two models for NUM_TRIALS\n",
-    "NUM_TRIALS = 10\n",
+    "NUM_TRIALS = 30\n",
     "lasso_mses = []\n",
     "fs_mses = []\n",
     "lasso_r2s = []\n",
@@ -127,33 +118,33 @@
     "fs_expected_outcomes = []\n",
     "\n",
     "for i in range(NUM_TRIALS):\n",
-    "    evaluate_lasso(fm_k4)\n",
-    "    lasso_mses.append(fm_k4.mse)\n",
-    "    lasso_r2s.append(fm_k4.r2)\n",
-    "    lasso_betas.append(fm_k4.beta)\n",
-    "    lasso_expected_outcomes.append(fm_k4.expected_outcomes)\n",
+    "    evaluate_lasso()\n",
+    "    lasso_mses.append(fm.mse)\n",
+    "    lasso_r2s.append(fm.r2)\n",
+    "    lasso_betas.append(fm.beta_hat)\n",
+    "    lasso_expected_outcomes.append(fm.expected_outcomes)\n",
     "\n",
-    "    fs_k4 = ForwardSelection(fm_k4.T_train, fm_k4.y_train, fm_k4.k, strong_heredity=False)\n",
-    "    evaluate_forward_selection(fs_k4, fm_k4.T_test, fm_k4.y_test)\n",
-    "    fs_mses.append(fs_k4.mse)\n",
-    "    fs_r2s.append(fs_k4.r2)\n",
-    "    fs_betas.append(fs_k4.results.params)\n",
-    "    beta_mask = fm_k4.pf.fit_transform(fm_k4.pf.powers_)\n",
-    "    fs_expected_outcome = beta_mask @ fs_k4.results.params\n",
+    "    fs = ForwardSelection(fm.T_train, fm.y_train, fm.k, strong_heredity=False)\n",
+    "    evaluate_forward_selection(fm.T_test, fm.y_test)\n",
+    "    fs_mses.append(fs.mse)\n",
+    "    fs_r2s.append(fs.r2)\n",
+    "    fs_betas.append(fs.results.params)\n",
+    "    beta_mask = fm.pf.fit_transform(fm.pf.powers_)\n",
+    "    fs_expected_outcome = beta_mask @ fs.results.params\n",
     "    fs_expected_outcomes.append(fs_expected_outcome)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso MSE: 0.010448857691879466 +/- 0.0005863676465723584\n",
-      "Forward Selection MSE: 0.9203394859271559 +/- 0.20274393255640472\n"
+      "Lasso MSE: 0.009954165694854111 +/- 0.000962830154710445\n",
+      "Forward Selection MSE: 0.9395961817800198 +/- 0.19386978754475162\n"
      ]
     }
    ],
@@ -169,15 +160,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso R2: 0.9894345499893273 +/- 0.0009767536252411717\n",
-      "Forward Selection R2: 0.09562999058090482 +/- 0.19678631771972868\n"
+      "Lasso R2: 0.9898985096496432 +/- 0.0013162330774505854\n",
+      "Forward Selection R2: 0.05462278817906719 +/- 0.17802075694765357\n"
      ]
     }
    ],
@@ -193,52 +184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Beta comparison\n",
-    "lasso_beta_z_scores = [ztest(lasso_beta, true_beta) for lasso_beta in lasso_betas]\n",
-    "fs_beta_z_scores = [ztest(fs_beta, true_beta) for fs_beta in fs_betas]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Expected outcomes comparison\n",
-    "lasso_outcomes_z_scores = [ztest(lasso_outcome, true_expected_outcomes) for lasso_outcome in lasso_expected_outcomes]\n",
-    "fs_outcomes_z_scores = [ztest(fs_outcome, true_expected_outcomes) for fs_outcome in fs_expected_outcomes]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Factorial model with k=8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fm_k8 = FactorialModel(\n",
-    "    n=1000,\n",
-    "    k=8,\n",
-    "    degree=8,\n",
-    "    sigma=0.1,\n",
-    "    sparsity=0.5,\n",
-    "    contrast_coding=True,\n",
-    "    beta_seed=0,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
@@ -246,19 +191,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01295634958009345\n"
+      "Lasso beta Z-test: 0.9812871702528473\n",
+      "Forward Selection beta Z-test: 0.2522971312167607\n"
      ]
     }
    ],
    "source": [
-    "# Fit and evaluate Lasso model\n",
-    "# fm_k8.sample_normal_beta()          # Normal beta (CHOOSE ONE)\n",
-    "fm_k8.sample_skewed_beta(min_active_degree=4)          # Skewed beta (CHOOSE ONE)\n",
-    "fm_k8.sample_and_split_data(seed=None)\n",
-    "fm_k8.fit_lasso()\n",
-    "fm_k8.predict()\n",
-    "fm_k8.compute_mse()\n",
-    "print(fm_k8.mse)"
+    "# Beta comparison\n",
+    "lasso_beta_ztest_pvals = [ztest(lasso_beta, true_beta)[1] for lasso_beta in lasso_betas]\n",
+    "fs_beta_ztest_pvals = [ztest(fs_beta, true_beta)[1] for fs_beta in fs_betas]\n",
+    "avg_lasso_beta_ztest_pval = np.mean(np.array(lasso_beta_ztest_pvals))\n",
+    "avg_fs_beta_ztest_pval = np.mean(np.array(fs_beta_ztest_pvals))\n",
+    "print(f\"Lasso beta Z-test: {avg_lasso_beta_ztest_pval}\")\n",
+    "print(f\"Forward Selection beta Z-test: {avg_fs_beta_ztest_pval}\")"
    ]
   },
   {
@@ -270,87 +215,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9852359549589855\n"
+      "Lasso expected outcomes Z-test: 0.8379351711049711\n",
+      "Forward Selection expected outcomes Z-test: 0.27498868239213187\n"
      ]
     }
    ],
    "source": [
-    "# Forward selection\n",
-    "fs_k8 = ForwardSelection(fm_k8.T_train, fm_k8.y_train, fm_k8.k)\n",
-    "fs_k8.forward_selection()\n",
-    "fs_k8.predict(fm_k8.T_test)\n",
-    "fs_k8.compute_mse(fm_k8.y_test)\n",
-    "print(fs_k8.mse)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Factorial model with k=12"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fm_k12 = FactorialModel(\n",
-    "    n=1000,\n",
-    "    k=12,\n",
-    "    degree=12,\n",
-    "    sigma=0.1,\n",
-    "    sparsity=0.5,\n",
-    "    contrast_coding=True,\n",
-    "    beta_seed=0,\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.0708815821718107\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Fit and evaluate Lasso model\n",
-    "# fm_k12.sample_normal_beta()         # Normal beta (CHOOSE ONE)\n",
-    "fm_k12.sample_skewed_beta(min_active_degree=6)         # Skewed beta (CHOOSE ONE)\n",
-    "fm_k12.sample_and_split_data(seed=None)\n",
-    "fm_k12.fit_lasso()\n",
-    "fm_k12.predict()\n",
-    "fm_k12.compute_mse()\n",
-    "print(fm_k12.mse)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9964351060670771\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Forward selection\n",
-    "fs_k12 = ForwardSelection(fm_k12.T_train, fm_k12.y_train, fm_k12.k)\n",
-    "fs_k12.forward_selection()\n",
-    "fs_k12.predict(fm_k12.T_test)\n",
-    "fs_k12.compute_mse(fm_k12.y_test)\n",
-    "print(fs_k12.mse)"
+    "# Expected outcomes comparison\n",
+    "lasso_outcomes_ztest_pvals = [ztest(lasso_outcome, true_expected_outcomes)[1] for lasso_outcome in lasso_expected_outcomes]\n",
+    "fs_outcomes_ztest_pvals = [ztest(fs_outcome, true_expected_outcomes)[1] for fs_outcome in fs_expected_outcomes]\n",
+    "avg_lasso_outcomes_ztest_pval = np.mean(np.array(lasso_outcomes_ztest_pvals))\n",
+    "avg_fs_outcomes_ztest_pval = np.mean(np.array(fs_outcomes_ztest_pvals))\n",
+    "print(f\"Lasso expected outcomes Z-test: {avg_lasso_outcomes_ztest_pval}\")\n",
+    "print(f\"Forward Selection expected outcomes Z-test: {avg_fs_outcomes_ztest_pval}\")"
    ]
   },
   {
@@ -367,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
