Added carlson and liu datasets

--- a/lasso_factorial_selection/lasso_vs_forward.ipynb
+++ b/lasso_factorial_selection/lasso_vs_forward.ipynb
@@ -143,8 +143,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso MSE: 0.009954165694854111 +/- 0.000962830154710445\n",
-      "Forward Selection MSE: 0.9395961817800198 +/- 0.19386978754475162\n"
+      "Lasso MSE: 0.010312842244923369 +/- 0.0010410510099751749\n",
+      "Forward Selection MSE: 0.87430547085553 +/- 0.3187434308491769\n"
      ]
     }
    ],
@@ -167,8 +167,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso R2: 0.9898985096496432 +/- 0.0013162330774505854\n",
-      "Forward Selection R2: 0.05462278817906719 +/- 0.17802075694765357\n"
+      "Lasso R2: 0.9897613543663283 +/- 0.0013902067470746675\n",
+      "Forward Selection R2: 0.13697753594586354 +/- 0.30868691135831317\n"
      ]
     }
    ],
@@ -191,8 +191,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso beta Z-test: 0.9812871702528473\n",
-      "Forward Selection beta Z-test: 0.2522971312167607\n"
+      "Lasso beta Z-test: 0.9792383723656444\n",
+      "Forward Selection beta Z-test: 0.295768724047711\n"
      ]
     }
    ],
@@ -215,8 +215,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lasso expected outcomes Z-test: 0.8379351711049711\n",
-      "Forward Selection expected outcomes Z-test: 0.27498868239213187\n"
+      "Lasso expected outcomes Z-test: 0.8326545054745663\n",
+      "Forward Selection expected outcomes Z-test: 0.30795314527338846\n"
      ]
     }
    ],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -310,6 +310,18 @@
     "plt.ylabel(\"MSE\")\n",
     "plt.legend()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### How to account for noise (HDP 10.6.1-2)\n",
+    "\n",
+    "$$\\lVert \\hat{x} - x \\rVert_2 \\leq C \\sigma \\sqrt{\\frac{s \\log n}{m}}$$\n",
+    "where $\\sigma = \\lVert w \\rVert_2 / \\sqrt{m}$.  Thus we have $m \\geq \\lVert w \\rVert_2^2 \\cdot s \\log n$\n",
+    "\n",
+    "**Question:** Is noise the same as the bias term?"
    ]
   },
   {
