--- a/lasso_factorial_selection/real_world.ipynb
+++ b/lasso_factorial_selection/real_world.ipynb
@@ -9,9 +9,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -19,25 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import statsmodels.api as sm\n",
-    "\n",
     "import rpy2.robjects as robjects\n",
     "from rpy2.robjects import pandas2ri\n",
     "from rpy2.robjects.packages import importr\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "from sklearn.linear_model import Lasso, LassoCV\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn import preprocessing\n"
+    "from factorial_model import FactorialModel\n",
+    "from forward_selection import ForwardSelection"
    ]
   },
   {
@@ -49,9 +49,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "R[write to console]: trying URL 'https://CRAN.R-project.org/src/contrib/FindIt_1.2.0.tar.gz'\n",
+      "\n",
+      "R[write to console]: Content type 'application/x-gzip'\n",
+      "R[write to console]:  length 150340 bytes (146 KB)\n",
+      "\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: =\n",
+      "R[write to console]: \n",
+      "\n",
+      "R[write to console]: downloaded 146 KB\n",
+      "\n",
+      "\n",
+      "* installing *source* package ‘FindIt’ ...\n",
+      "** package ‘FindIt’ successfully unpacked and MD5 sums checked\n",
+      "** using staged installation\n",
+      "** R\n",
+      "** data\n",
+      "*** moving datasets to lazyload DB\n",
+      "** byte-compile and prepare package for lazy loading\n",
+      "** help\n",
+      "*** installing help indices\n",
+      "** building package indices\n",
+      "** testing if installed package can be loaded from temporary location\n",
+      "** testing if installed package can be loaded from final location\n",
+      "** testing if installed package keeps a record of temporary installation path\n",
+      "* DONE (FindIt)\n",
+      "R[write to console]: \n",
+      "\n",
+      "R[write to console]: \n",
+      "R[write to console]: The downloaded source packages are in\n",
+      "\t‘/private/var/folders/pg/dtpn_hn11nd280g5vwz2x3_r0000gn/T/Rtmp6mKMKd/downloaded_packages’\n",
+      "R[write to console]: \n",
+      "R[write to console]: \n",
+      "\n",
+      "R[write to console]: Updating HTML index of packages in '.Library'\n",
+      "\n",
+      "R[write to console]: Making 'packages.html' ...\n",
+      "R[write to console]:  done\n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<rpy2.rinterface_lib.sexp.NULLType object at 0x127e266d0> [0]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "base = importr('base')\n",
     "utils = importr('utils')\n",
@@ -60,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +340,7 @@
        "10  1.011210e+09  "
       ]
      },
-     "execution_count": 126,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +394,7 @@
        "       [1, 0, 0, 1, 0, 1, 0]])"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,23 +423,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.207254, 1.      , 1.      , 1.      , 0.      , 0.      ])"
+       "(2816, 6)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dac[11]"
+    "dac.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fm = FactorialModel(\n",
+    "    n=dac.shape[0],\n",
+    "    k=dac.shape[1] - 1,\n",
+    "    degree=dac.shape[1] - 1,\n",
+    "    contrast_coding=True,\n",
+    "    beta_seed=0,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Method to evaluate Lasso model\n",
+    "def evaluate_lasso():\n",
+    "    fm.convert_and_split_data(dac[:, 1:], dac[:, 0], is_dummy_coded=True, seed=None)\n",
+    "    fm.fit_lasso()\n",
+    "    fm.predict()\n",
+    "    fm.compute_mse()\n",
+    "    fm.compute_r2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Method to evaluate forward selection\n",
+    "def evaluate_forward_selection(T_test, y_test):\n",
+    "    fs.forward_selection()\n",
+    "    fs.predict(T_test)\n",
+    "    fs.compute_mse(y_test)\n",
+    "    fs.compute_r2()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evaluate two models for NUM_TRIALS\n",
+    "NUM_TRIALS = 30\n",
+    "lasso_mses = []\n",
+    "fs_mses = []\n",
+    "lasso_r2s = []\n",
+    "fs_r2s = []\n",
+    "lasso_betas = []\n",
+    "fs_betas = []\n",
+    "lasso_expected_outcomes = []\n",
+    "fs_expected_outcomes = []\n",
+    "\n",
+    "for i in range(NUM_TRIALS):\n",
+    "    evaluate_lasso()\n",
+    "    lasso_mses.append(fm.mse)\n",
+    "    lasso_r2s.append(fm.r2)\n",
+    "    lasso_betas.append(fm.beta_hat)\n",
+    "    lasso_expected_outcomes.append(fm.expected_outcomes)\n",
+    "\n",
+    "    fs = ForwardSelection(fm.T_train, fm.y_train, fm.k, strong_heredity=False)\n",
+    "    evaluate_forward_selection(fm.T_test, fm.y_test)\n",
+    "    fs_mses.append(fs.mse)\n",
+    "    fs_r2s.append(fs.r2)\n",
+    "    fs_betas.append(fs.results.params)\n",
+    "    beta_mask = fm.pf.fit_transform(fm.pf.powers_)\n",
+    "    fs_expected_outcome = beta_mask @ fs.results.params\n",
+    "    fs_expected_outcomes.append(fs_expected_outcome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso MSE: 0.1836976843879816 +/- 0.008742647707358926\n",
+      "Forward Selection MSE: 5.503493046971891e+22 +/- 2.8382748814687058e+23\n"
+     ]
+    }
+   ],
+   "source": [
+    "# MSE comparison\n",
+    "avg_lasso_mse = np.mean(np.array(lasso_mses))\n",
+    "avg_fs_mses = np.mean(np.array(fs_mses))\n",
+    "std_lasso_mse = np.std(np.array(lasso_mses))\n",
+    "std_fs_mses = np.std(np.array(fs_mses))\n",
+    "print(f\"Lasso MSE: {avg_lasso_mse} +/- {std_lasso_mse}\")\n",
+    "print(f\"Forward Selection MSE: {avg_fs_mses} +/- {std_fs_mses}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lasso R2: 0.000554329605366699 +/- 0.005306503178718969\n",
+      "Forward Selection R2: 0.005694816182169216 +/- 0.003228859185179845\n"
+     ]
+    }
+   ],
+   "source": [
+    "# R2 comparison\n",
+    "avg_lasso_r2 = np.mean(np.array(lasso_r2s))\n",
+    "avg_fs_r2 = np.mean(np.array(fs_r2s))\n",
+    "std_lasso_r2 = np.std(np.array(lasso_r2s))\n",
+    "std_fs_r2 = np.std(np.array(fs_r2s))\n",
+    "print(f\"Lasso R2: {avg_lasso_r2} +/- {std_lasso_r2}\")\n",
+    "print(f\"Forward Selection R2: {avg_fs_r2} +/- {std_fs_r2}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
