Added interactive cluster

--- a/lasso_factorial_selection/real_world.ipynb
+++ b/lasso_factorial_selection/real_world.ipynb
@@ -36,6 +36,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### [INSERT NEW DATASETS]\n",
+    "\n",
+    "- Continuous output variable (linear regression)\n",
+    "\n",
+    "- Randomized control trial"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Appendix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 5-bit DAC process (Liu and Huang, NIST)"
    ]
   },
